Fixed all services and app logic